# bluetooth_audio_cli

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  README_zh.md  build.bat  build.sh
src/: app_controller.cpp  app_controller.h  audio_service.h  audio_service_linux.cpp  audio_service_win.cpp  bluetooth_service.cpp  bluetooth_service.h  bluetooth_service_linux.cpp  main.cpp  platform.h  platform_linux.cpp  platform_win.cpp  settings.cpp  settings.h  volume_service.cpp  volume_service.h
